--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         document.addEventListener('touchmove', handle, { passive: false });
         document.addEventListener('mousewheel', handle, { passive: false });
       }
-       const socket=io("https://onlineapi.glitch.me", {
+       const socket=io("https://gotewin.glitch.me", {
 	 "force new connection" : true,
 	 "reconnectionAttempts": "Infinity",
       "transports" : ["websocket"]
